--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"dev": "nodemon server.js"
 	},
 	"dependencies": {
-		"express": "^4.16.2",
+		"express": "^4.16.2"
+	},
+	"devDependencies": {
 		"nodemon": "^1.17.1"
 	},
 	"repository": {
