changed package.json title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "express-basic-response-example-1",
+	"name": "simple-full-stack",
 	"version": "0.0.1",
 	"description": "",
 	"main": "server.js",
